--- a/items/src/main/resources/application.properties
+++ b/items/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8010
 spring.application.name=items-service
 
-products-service.ribbon.listOfServers=localhost:8000,localhost:8001
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
