--- a/products/src/main/resources/application.properties
+++ b/products/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port=8000
 spring.application.name=products-service
+server.port=${PORT:0}
+eureka.instance.instance-id=${spring.appliaction.name}:${spring.application.instance_id:${random.value}}
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
